@@ -1,45 +1,65 @@
--Xms6G
--Xmx6G
--XX:MaxDirectMemorySize=15530M
--XX:+UnlockDiagnosticVMOptions
--XX:+LogVMOutput
--XX:LogFile=/opt/nexus/sonatype-work/nexus3/log/jvm.log
--XX:-OmitStackTraceInFastThrow
--Djava.net.preferIPv4Stack=true
--Dfile.encoding=UTF-8
+---
+- name: Nexus Configuration Test Deployment
+  hosts: all
+  become: yes
+  vars:
+    # Path Definitions
+    nexus_base_path: "/opt/nexus"
+    nexus_install_dir: "{{ nexus_base_path }}/nexus3"
+    nexus_data_dir: "{{ nexus_base_path }}/sonatype-work/nexus3"
+    nexus_ssl_dir: "{{ nexus_base_path }}/ssl"
+    
+    # Performance Parameters
+    nexus_xms: "6G"
+    nexus_xmx: "6G"
+    nexus_max_direct_memory: "15530M"
+    
+    # Certificate and Passwords
+    keystore_filename: "nexus01.jks"
+    keystore_password_raw: "edrcmadm"
+    keystore_password_obf: "OBF:1unr1sov1uvk1u9h1ua11uum1sov1uo7"
 
--Djavax.net.ssl.trustStore=/opt/nexus/ssl/nexus01.jks
--Djavax.net.ssl.trustStorePassword=edrcmadm
--Djavax.net.ssl.keyStore=/opt/nexus/ssl/nexus01.jks
--Djavax.net.ssl.keyStorePassword=edrcmadm
+  tasks:
+    - name: Ensure target directories exist
+      file:
+        path: "{{ item }}"
+        state: directory
+        owner: nexus
+        group: nexus
+        mode: '0755'
+      loop:
+        - "{{ nexus_install_dir }}/bin"
+        - "{{ nexus_install_dir }}/etc/jetty"
+        - "{{ nexus_ssl_dir }}"
 
--Dkaraf.home=.
--Dkaraf.base=.
--Djava.util.logging.config.file=etc/spring/java.util.logging.properties
--Dkaraf.data=/opt/nexus/sonatype-work/nexus3
--Dkaraf.log=/opt/nexus/sonatype-work/nexus3/log
--Djava.io.tmpdir=/opt/nexus/sonatype-work/nexus3/tmp
--Djdk.tls.ephemeralDHKeySize=2048
+    - name: Generate nexus.vmoptions from template
+      template:
+        src: templates/nexus.vmoptions.j2
+        dest: "{{ nexus_install_dir }}/bin/nexus.vmoptions"
+        owner: nexus
+        group: nexus
+        mode: '0644'
+        backup: yes
+      register: vm_test
 
---add-reads=java.xml=java.logging
---add-opens
-java.base/java.security=ALL-UNNAMED
---add-opens
-java.base/java.net=ALL-UNNAMED
---add-opens
-java.base/java.lang=ALL-UNNAMED
---add-opens
-java.base/java.util=ALL-UNNAMED
---add-opens
-java.naming/javax.naming.spi=ALL-UNNAMED
---add-opens
-java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
---add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED
---add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED
---add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED
---add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED
---add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED
---add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
---add-exports=java.base/sun.security.x509=ALL-UNNAMED
---add-exports=java.base/sun.security.rsa=ALL-UNNAMED
---add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
+    - name: Generate jetty-https.xml from template
+      template:
+        src: templates/jetty-https.xml.j2
+        dest: "{{ nexus_install_dir }}/etc/jetty/jetty-https.xml"
+        owner: nexus
+        group: nexus
+        mode: '0644'
+        backup: yes
+      register: jetty_test
+
+    - name: Check if JKS certificate exists
+      stat:
+        path: "{{ nexus_ssl_dir }}/{{ keystore_filename }}"
+      register: jks_check
+
+    - name: Display deployment status
+      debug:
+        msg: 
+          - "VMOptions Status: {{ 'Changed' if vm_test.changed else 'No Change' }}"
+          - "Jetty XML Status: {{ 'Changed' if jetty_test.changed else 'No Change' }}"
+          - "Certificate File: {{ 'Found' if jks_check.stat.exists else 'Missing' }}"
